add a form to display all volunteers

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,3 +15,7 @@
 <% else %>
 <p>There are no projects yet!</p>
 <% end %>
+
+<a href="/new"><button type="button" class="btn btn-danger">Add new project</button></a>
+
+<a href="/all_volunteers"><button type="button" class="btn btn-info">Show all volunteers</button></a>
