--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,6 @@
 <h1>Create a new project</h1>
 
-<form action="/" method="post">
+<form action="/projects" method="post">
   <div class="form-group">
     <label for="title">Title:</label>
     <input type="text" name="title" class="form-control">
