--- a/views/projects.erb
+++ b/views/projects.erb
@@ -1,1 +1,27 @@
-sucessfully added!
+<div class="jumbotron">
+	<h2><%= @project.title	%></h2>
+</div>
+
+<h1>Volunteers:</h1>
+<% if @list.any? %>
+<p>List of volunteers:</p>
+
+<ul>
+  <% @list.each do |item| %>
+  <li><a href="/<%=item.id() %>"><%=item.name %></a></li>
+  <% end %>
+</ul>
+<% else %>
+<p>There are no volunteers yet!</p>
+<% end %>
+
+<h1>Add a new volunteer</h1>
+
+<form action="/add_volunteer" method="post">
+  <div class="form-group">
+  	<input type="hidden" value="<%= @project.id %>" name = "project_id"class="form-control">
+    <label for="name">Name:</label>
+    <input type="text" name="name" class="form-control">
+  </div>
+ <button type="submit" class="btn">Add</button>
+</form>
